renamed to torggler door

--- a/torggler_door/model.config
+++ b/torggler_door/model.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" ?>
 <model>
-    <name>Cool Door</name>
+    <name>Torggler Door</name>
     <version>1.0</version>
     <sdf version="1.6">model.sdf</sdf>
     <author>
@@ -9,7 +9,7 @@
     </author>
     <description>
       Cool door made with the model editor, without proper measurements,
-      just using the eyemeter. Based on GIF attached.
-      GIF source: http://www.dailymail.co.uk/sciencetech/article-2556835/The-shapeshifting-doors-defy-gravity-flip-slightest-touch.html
+      just using the eyemeter. Based on video by thang010146:
+      https://www.youtube.com/watch?v=AvLZwzHtHKo
     </description>
 </model>
