--- a/bicycle/model.config
+++ b/bicycle/model.config
@@ -4,8 +4,7 @@
     <version>1.0</version>
     <sdf version="1.6">model.sdf</sdf>
     <author>
-        <name></name>
-        <email></email>
+        <name>chapulina</name>
     </author>
-    <description></description>
+    <description>Based on Thingiverse model by death_metal: https://www.thingiverse.com/thing:201745</description>
 </model>
